--- a/tic-tac-toe.css
+++ b/tic-tac-toe.css
@@ -110,7 +110,7 @@ h1 span {
   color: white;
 }
 
-.btn {
+#reset-btn {
   color: white;
   background-color: var(--lighterBlue);
   border: 1px solid var(--lighterBlue);
@@ -125,7 +125,7 @@ h1 span {
   border-radius: .25rem;
 }
 
-.btn:hover {
+#reset-btn:hover {
   background-color: var(--lightBlue);
   border: 1px solid var(--lightBlue);
   cursor: pointer;
